--- a/style/main.css
+++ b/style/main.css
@@ -11,7 +11,7 @@
   --black: rgb(2, 29, 45);
   --red: rgb(134, 39, 39);
   --green: rgb(50, 88, 50);
-  --yellow: rgb(235, 235, 22);
+  --yellow: rgb(226, 226, 13);
   --gradient: linear-gradient(0deg, rgba(200,200,200,0.1) 0%, rgba(50,50,50,0.1) 100%);
   --border: 0.5rem solid rgba(0, 0, 0, 0.2);
   --shadow: 0.5rem 0.5rem 0 0 rgba(0, 0, 0, 0.2);
@@ -34,82 +34,122 @@ main {
   display: flex;
   justify-content: space-between;
 }
-.detail-container {
-  width: 90%;
-  height: 80vh;
-  overflow: hidden;
-  margin: 2% auto;
-  background-color: var(--terciary-color);
-  border-radius: 2rem;
+
+button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font: inherit;
 }
-.detail-header {
-  padding: 2%;
+button:hover {
+  transform: scale(1.1);
+}
+.checkout {
+  display: flex;
+  justify-content: space-around;
+  margin: 2%;
+}
+.product-summary {
+  width: 40%;
+  height: 70vh;
+  overflow: hidden;
+  background: var(--terciary-color, rgb(33, 136, 192)) var(--gradient, linear-gradient(0deg, rgba(200,200,200,0.1) 0%, rgba(50,50,50,0.1) 100%));
+  border-radius: 1rem;
+  box-shadow: var(--shadow, 0.5rem 0.5rem 0 0 rgba(0, 0, 0, 0.2));
+  font-size: 1.5rem;
+}
+.product-list {
+  height: 90%;
+  overflow: auto;
+  margin: 1%;
+  padding-right: 2%;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+  padding: 1% 5%;
+  color: var(--white, white);
   background-color: var(--primary-color, rgb(24, 80, 111));
   border-bottom: var(--border, 0.5rem solid rgba(0, 0, 0, 0.2));
+  border-width: 0.3rem;
 }
-.detail-container main {
-  height: 100%;
+.product-list::-webkit-scrollbar{
+  width: 0.3rem; 
+  background: transparent; 
+}
+.product-list:hover::-webkit-scrollbar-thumb{
+  background-color: var(--secondary-color, rgb(11, 70, 104)); 
+  border-radius: 1rem;
+}
+.product-list:hover::-webkit-scrollbar-thumb:hover{
+  background-color: var(--primary-color, rgb(24, 80, 111)); 
+}
+.product {
+  position: relative;
   display: flex;
-  justify-content: space-around;
-  align-items: stretch;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 10%;
+  padding: 3%;
+  border-bottom: var(--border, 0.5rem solid rgba(0, 0, 0, 0.2));
+  border-width: 0.2rem;
 }
-.slider-price {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  margin: 0 5%;
-}
-.slider {
+.delete-button {
+  width: 1.5rem;
+  height: 1.5rem;
+  position: absolute;
+  top: 10%;
+  right: 5%;
   display: flex;
   justify-content: center;
-  align-items: stretch;
-}
-.arrow {
-  width: 3rem;
-  padding-right: 2%;
-  background-color: var(--primary-color, rgb(24, 80, 111));
-  border-radius: 0 1rem 1rem 0;
+  align-items: center;
+  border-radius: 0.2rem;
   cursor: pointer;
+  --fill-color: var(--secondary-color, rgb(11, 70, 104));
 }
-.arrow.left {
-  transform: scale(-1);
+.delete-button:hover {
+  background-color: var(--red, red);
+  transform: scale(1.1);
+  --fill-color: var(--white, white);
 }
-.arrow:hover {
-  filter: brightness(0.9);
+.trash-icon {
+  width: 60%;
 }
-.slider-images {
-  width: 40rem;
-  height: 30rem;
-  position: relative;
-  overflow: hidden;
-  border-block: 0.5rem solid var(--primary-color, rgb(24, 80, 111));
+.trash-icon * {
+  fill: var(--fill-color);
 }
-.slider-images img {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+.product-miniature {
+  width: 7rem;
+  height: 7rem;
+  border-radius: 0.2rem;
   object-fit: cover;
 }
-.price-container {
+.product-details {
+  flex: 1;
+}
+.quantity-price {
   display: flex;
-  align-items: center;
-  gap: 3%;
-  font-size: 1.25rem;
+  justify-content: space-between;
+  font-size: 1.2rem;
 }
-.discount {
-  padding: 3%;
-  background-color: var(--red, red);
-  font-size: 1.5rem;
-  font-weight: bold;
-  border-radius: 0 0.75rem 0 0;
+.quantity-container {
+  display: flex;
 }
-.old-price {
-  text-decoration: line-through;
-  filter: brightness(0.4);
+.quantity {
+  width: 2.5rem;
+  background: none;
+  color: inherit;
+  border: none;
+  font: inherit;
+  text-align: center;
 }
+.quantity::-webkit-outer-spin-button,
+.quantity::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+.quantity-price button:hover {
+  filter: brightness(0.8);
+  transform: scale(1.1);
+}
+
+
